// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TexyBox.ts should render TextBox with basic props 1`] = `
<div class="text-box__wrapper">
  <div class="text-box__content">
    <textarea class="text-box"
              placeholder="hello world"
              autofocus
              autocomplete="on"
              spellcheck="false"
              minlength="12"
              maxlength="20"
              rows="20"
              cols="50"
    >
    </textarea>
  </div>
</div>
`;

exports[`TexyBox.ts should render text-box__count element when set \`showCount\` prop 1`] = `
<div class="text-box__wrapper">
  <div class="text-box__content">
    <textarea class="text-box"
              autocomplete="off"
              spellcheck="false"
              rows="10"
              cols="20"
              maxlength="20"
    >
    </textarea>
    <div class="text-box__count--wrapper">
      <span class="text-box__count">
        <span>
          11
        </span>
        <span>
          /
        </span>
        <span>
          20
        </span>
      </span>
    </div>
  </div>
</div>
`;
